manifests/homelab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: freshrss.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss-service
            port:
              number: 80

  - host: excalidraw.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: excalidraw-service
            port:
              number: 80
